[workspace]
resolver = "2"
members = [
    "compiler/abyss_lexer",
    "compiler/abyss_parser",
    "compiler/abyss_codegen",
    "compiler/abyss_analyzer",
]


[package]
name = "abyss"
version = "0.1.0"
edition = "2024"

[dependencies]
abyss_lexer = { path = "./compiler/abyss_lexer" }
abyss_parser = { path = "./compiler/abyss_parser" }
abyss_codegen = { path = "./compiler/abyss_codegen" }
abyss_analyzer = { path = "./compiler/abyss_analyzer" }

libc = "0.2"
cc = "1.0"
include_dir = "0.7"
tempfile = "3"


[build-dependencies]
cc = "1.0"
